--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -116,7 +116,7 @@ function shuffle(array) {
 /* add items */
 var items = [
     {% for i in items %}
-    { "title":{{ i.title | strip | escape | jsonify }}, "format":{% if i.format %}{{ i.format | escape | jsonify }}{% else %}""{% endif %}, {% for f in fields %}{% if i[f.field] %}{{ f.field | escape | jsonify }}:{{ i[f.field] | strip | jsonify }},{% endif %}{% endfor %} {% if i.youtubeid %} "youtube": {{ i.youtubeid | jsonify }},{% endif %} "id":{{ i.objectid | jsonify }}, "filename":"{{ i.filename | split: '.' | first }}" }{% unless forloop.last %},{% endunless %}{% endfor %}
+    { "title":{{ i.title | strip | escape | jsonify }}, "format":{% if i.format %}{{ i.format | escape | jsonify }}{% else %}""{% endif %}, {% for f in fields %}{% if i[f.field] %}{{ f.field | escape | jsonify }}:{{ i[f.field] | strip | jsonify }},{% endif %}{% endfor %} {% if i.youtubeid %} "youtube": {{ i.youtubeid | jsonify }},{% endif %} "id":{{ i.objectid | jsonify }}, "filename":"{{ i.filename | downcase | split: '.' | first }}" }{% unless forloop.last %},{% endunless %}{% endfor %}
 ];
 
 /* init browse page */
